3_Kubernetes/01-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-pod
spec:
  containers:
    - name: nginx-container
      image: nginx
      ports:
        - containerPort: 80

    - name: firefox-container
      image: linuxserver/firefox
      ports:
        - containerPort: 3000
    

# step 1  --> kubectl port-forward pod/nginx-pod 9090:3000
# step 2 --> opens browser and access http://localhost:9090 to see the firefox container running
# step 3 --> on that page hit http://localhost:80 to see the nginx container running
