3_Kubernetes/02-nginx-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-pod
spec:
  containers:
    - name: nginx-container
      image: nginx
      ports:
        - containerPort: 80


# kubectl apply -f 02-nginx-pod.yaml
# kubectl get pods
# kubectl describe pod nginx-pod
